--- a/PA1/requirements.txt
+++ b/PA1/requirements.txt
@@ -44,7 +44,7 @@ googleapis-common-protos==1.52.0
 gpustat==0.6.0
 gql==0.2.0
 graphql-core==1.1
-grpcio==1.31.0
+#grpcio==1.31.0
 gym==0.17.2
 h5py==2.10.0
 hiredis==1.1.0
